:lipstick: stop wrapping source code

--- a/source/_sass/syntax-highlight.scss
+++ b/source/_sass/syntax-highlight.scss
@@ -10,6 +10,7 @@
 .highlighter-rouge {
   margin: 0.618em 0;
   pre.highlight {
+    white-space: pre;
     overflow-x: auto;
     margin: 0;
     padding: 0.382rem 1rem;
@@ -19,6 +20,7 @@
 figure.highlight {
   margin: 0.618em 0;
   & > pre {
+    white-space: pre;
     overflow-x: auto;
     margin: 0;
     padding: 0.382rem 1rem;
